<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:label=""
    android:id="@+id/menuPrueba">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/navigation_stores"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/title_stores"
        android:orderInCategory="3"
        android:visible="true" />


</menu>